# scylla

./: .gitignore  CMakeLists.txt  Makefile  Makefile.emscripten  README.md
.github/workflows/: cmake-cpp.yml  cpp.yml
src/: CpuMonitor.cpp  CpuMonitor.hpp  RamMonitor.cpp  RamMonitor.hpp  main.cpp
